--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 		<h2 class="content__title">Ross Jameson</h2>
 		<div class = "socialMediaWrapper"> 
 											 
-				<li><a href=""> <i class="fa fa-facebook-square" aria-hidden="true"></i></a> </li>
+				<!-- <li><a href=""> <i class="fa fa-facebook-square" aria-hidden="true"></i></a> </li> -->
 				<li><a href="https://github.com/Fin23"><i class="fa fa-github" aria-hidden="true"></i></a></li>
 				<li><a href="https://www.linkedin.com/in/ross-jameson-891047186/"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
 					</div>
