added link to google drive resume

--- a/index.html
+++ b/index.html
@@ -95,7 +95,9 @@
 				<li><a href="https://github.com/Fin23"><i class="fa fa-github" aria-hidden="true"></i></a></li>
 				<li><a href="https://www.linkedin.com/in/ross-jameson-891047186/"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
 					</div>
-			<div class="content__subtitle">	<a href= "./projects/resume and stuff/resume1.pdf"class="github">My Resume</a></div>
+					<!-- ./projects/resume and stuff/resume1.pdf -->
+
+			<div class="content__subtitle">	<a href= "https://docs.google.com/document/d/1qPv6Nw0cwqhH7nYe0iAHqcZeezebgx5mFps-4yERMxc/edit?usp=sharing"class="github">My Resume</a></div>
 			<a href="https://mail.google.com/mail/?view=cm&fs=1&to=rossjameson1623@gmail.com&su=SUBJECT&body=BODY">
 		
 			<h1 >email: rossjameson1623@gmail.com</h1>	</a>
