--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 					<a href="#content-3" class="grim__link grim__item-content">
 						<div class="grim__item-inner">
 							<h3 class="grim__item-title">DND</h3>
-								<span class="grim__item-desc">dnd character application</span>
+								<span class="grim__item-desc">dnd character application: under construction still</span>
 									</div>
 										</a>
 											<div class="grim__item-bg grim__item-bg-cover grim__item-bg--7"></div>
@@ -246,7 +246,7 @@
 				<div class="grim__item-img grim__item-img--4" style="background-image: url(img/4.jpg);"></div>
 					<a href="#content-5" class="grim__link grim__item-content">
 						<div class="grim__item-inner">
-							<h3 class="grim__item-title">Contact</h3>
+							<h3 class="grim__item-title">About Me</h3>
 								<span class="grim__item-desc">Feel nature</span>
 									</div>
 										</a>
