--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -98,7 +98,7 @@
                 </div>
             <div class = "projectRow"> <strong> 
                     <div class = "column">
-                            <a href="">project ten, </a>
+                            <a href="https://friend-finder-fin23.herokuapp.com/">api production friend finder </a>
                     </div>
                     <div class = "column">
                             <a href="">project eleven, </a> 
