--- a/public/index.html
+++ b/public/index.html
@@ -107,10 +107,26 @@
 				</div>
 
 			<div id="content-2" class="content content--switch">
-				<h2 class="content__title">Bio</h2><div class="row4">
-					Info About Me
+				<h2 class="content__title">Skills</h2><div class="row4">
+					<ol class="skills">
+						<li>
+							MongoDB, Express,
+						</li>
+						<li>
+							React,React Native,
+						</li>
+						<li>
+							Node.JS, Javascript,
+						</li>
+						<li>
+							HTML, CSS,
+						</li>
+						<li>
+							
+						</li>
+					</ol>
 				</div>
-					<div class="content__subtitle">Lift your spirits</div>
+					
 						</div>
 
 			<div id="content-3" class="content content--switch">
@@ -128,11 +144,11 @@
 				<h2 class="content__title">About ME</h2>
 
 <h3 class="about-me">
-	Hello and welcome traveler, my name is Ross Jameson. I am 29, from Independence Missouri and I have had a pretty interesting life. I've made great friends, been given a great family and have had many amazing opportunities in life. Thanks to my experiences  and seeing what the  world has to offer I have also been blessed with a fierce appetite for learning, creating and always trying to challenge myself. When I was in high school I had some great teachers who really inspired me in both history and science. My love of history would later bloom into my drive to become a teacher and my love of science would later push me into the hobby of computers and coding. As I got closer to going to college I couldn't decide what I wanted to do, I thought about so many things including computer science but in the end I decided to get my bachelors from UMKC in Secondary Education. I spent four and a half years studying and finally got my bachelors degree, becoming the first person in my immediate family to actually finish college and graduate. It was a great day to walk down and grab that diploma. <br>
+	Hello and welcome traveler, my name is Ross Jameson. I am 29, from Independence Missouri and I have had a pretty interesting life. I've made great friends, been given a great family and have   been blessed with a fierce appetite for learning, creating and always trying to challenge myself. When I was in high school I had some great teachers who really inspired me in both history and science. My love of history would later bloom into my drive to become a teacher and my love of science would later push me into the hobby of computers and coding. As I got closer to going to college I couldn't decide what I wanted to do, art, computers, archeology or education but in the end I decided to get my bachelors from UMKC in Secondary Education. I spent four and a half years studying and finally got my bachelors degree, becoming the first person in my immediate family to actually finish college and graduate. It was a great day to walk down and grab that diploma. <br>
 <br>
-	After graduation I found my first job at Eisenhower high school taking a position as a special education teacher to help teach history to their special needs program. It was the best first school to teach at anyone could ask for, but after two years in Wichita I decided to move back home to Kansas City. I would go on to teach another three years after that. But after finishing my fifth full year of teaching I became burnt out and in need of a change, thats when I decided to take my computer hobby and turn it into my career. <br>
+	After graduation I found my first job at Eisenhower high school taking a position as a special education teacher to help teach history to their special needs program. It was the best first school to teach at anyone could ask for, but after two years in Wichita I decided to move back home to Kansas City. I would go on to teach another three years after that. But after finishing my fifth full year of teaching I decided to make a career change, thats when I decided to take my computer hobby and turn it into my career. <br>
 	<br>
-	I had been coding in my free time learning the basics through you tube tutorials, learning CSS HTML and JAVASCRIPT while I was still teaching just doing it for fun. But once I decided to go down this new career path I found a program through KU who happened to have a Full Stack program. So in May of 2019 I started my class and have been busting my ass ever since coding nearly every single day learning all the ins and outs of front end and back end development, and now that I have graduated I am ready to show the world what I can do and finally start my next life's journey. 
+	I had been coding in my free time learning the basics through you-tube tutorials, learning CSS HTML and JAVASCRIPT while I was still teaching just doing it for fun. But once I decided to go down this new career path I found a program through KU who happened to have a Full Stack program. So in May of 2019 I started my class and have been busting my ass ever since, coding nearly every single day learning all the ins and outs of front-end and back-end development, and now that I have graduated, I am ready to show the world what I can do and finally start my next journey in life. 
 	 
 </h3>
 
@@ -248,7 +264,7 @@
 							</div>
 								<a href="#content-2" class="grim__link grim__item-content">
 									<div class="grim__item-inner">
-										<h3 class="grim__item-title"> hello</h3>
+										<h3 class="grim__item-title"> Skills</h3>
 											<span class="grim__item-desc">  </span>
 												</div>
 													</a>
