--- a/public/index.html
+++ b/public/index.html
@@ -202,9 +202,9 @@
 						</strong>
 						</div>
 					<div class = "projectRow"> <strong> 
-							<div class = "column">
-									<a href="">project ten, </a>
-							</div>
+						<div class = "column">
+                            <a href="https://friend-finder-fin23.herokuapp.com/">api production friend finder </a>
+                    </div>
 							<div class = "column">
 									<a href="">project eleven, </a> 
 							</div>
