--- a/public/index.html
+++ b/public/index.html
@@ -103,7 +103,7 @@
 			<div class="content__subtitle">	<a href= "https://docs.google.com/document/d/1qPv6Nw0cwqhH7nYe0iAHqcZeezebgx5mFps-4yERMxc/edit?usp=sharing"class="github">My Resume</a></div>
 			<a href="https://mail.google.com/mail/?view=cm&fs=1&to=rossjameson1623@gmail.com&su=SUBJECT&body=BODY">
 		
-			<h1 >email: rossjameson1623@gmail.com</h1>	</a>
+			<h1 class="email1">email: rossjameson1623@gmail.com</h1>	</a>
 				</div>
 
 			<div id="content-2" class="content content--switch">
@@ -278,8 +278,12 @@
 							<div class = "column">
 									<a href="https://news-scrape-fin23.herokuapp.com/#">News App, utilizing scrape  </a>
 							</div>
+							<div class = "column">
+									<a href="https://friend-finder-fin23.herokuapp.com/">api production friend finder </a>
+							</div>
 						</strong>
 						</div>
+
 					<div class = "projectRow"> <strong> 
 						<div class = "column">
                             <a href="https://friend-finder-fin23.herokuapp.com/">api production friend finder </a>
@@ -293,9 +297,9 @@
 						</strong>
 						</div>
 				
-					<strong>  
+					<!-- <strong>  
 					<a  href= "https://github.com/Fin23"class="github1">github</a>
-				</strong>
+				</strong> -->
 			</div>
 
 
