added updates to portfolio

--- a/public/index.html
+++ b/public/index.html
@@ -103,7 +103,7 @@
 					</div>
 					<!-- ./projects/resume and stuff/resume1.pdf -->
 
-			<div class="content__subtitle">	<a href= "https://docs.google.com/document/d/1qPv6Nw0cwqhH7nYe0iAHqcZeezebgx5mFps-4yERMxc/edit?usp=sharing"class="myResume">My Resume</a></div>
+			<div class="content__subtitle">	<a href= "./img/Resume 16.pdf"class="myResume">My Resume</a></div>
 			
 			<a href="https://mail.google.com/mail/?view=cm&fs=1&to=rossjameson1623@gmail.com&su=SUBJECT&body=BODY">
 				<div class="email1">Email: rossjameson1623@gmail.com   
@@ -234,7 +234,7 @@
 													  <div class="back">
 														  <div class="inner">
 															  <p>
-																  ++==+++?++==+++ click me
+																 Javascript, Firebase, Rest API, HTML, CSS  click me
 															  </p>
 														  </div>
 														</a>
@@ -255,7 +255,7 @@
 													  <a href="./projects/giphy-API-master/index.html">
 													  <div class="back">
 														  <div class="inner">
-															  <p>++==+++?++==+++ click me</p>
+															  <p>Javascript, Node.js, HTML, CSS, REST api, with ajax call to giphy click me</p>
 														  </div>
 														</a>
 													  </div>
@@ -274,7 +274,7 @@
 													  <a href="./projects/Word-Game/index.html">
 													  <div class="back">
 														  <div class="inner">
-															  <p>Word Game Click ME.</p>
+															  <p> javascript, node.js, html, css, REST api Word Game Click ME.</p>
 														  </div>
 														  </a>
 													  </div>
@@ -286,13 +286,13 @@
 													  <div class="front" style="background-image: url(./img/hauseBook.jpg">
 														  <div class="inner">
 															  <p>HauseBook App</p>
-												<span>Lorem ipsum</span>
+												<span>desktop & semi-mobile responsive </span>
 														  </div>
 													  </div>
 													  <a href="./projects/groupProject-1/index.html"> 
 													  <div class="back">
 														  <div class="inner">
-															  <p>click me.</p>
+															  <p> REST api, creating, and connecting to outside API's, Javascript, google user login authentication, jquery HTML, CSS click me.</p>
 														  </div>
 														</a>
 													  </div>
@@ -305,13 +305,13 @@
 													  <div class="front" style="background-image: url(./img/dogAdopt.jpg)">
 														  <div class="inner">
 															  <p>Woofyndor pet adoption</p>
-												<span>Lorem ipsum</span>
+												<span>Desktop, semi-mobile responsive</span>
 														  </div>
 													  </div>
 													  <a href="./projects/group-project-2/app/public/index.html"> 
 													  <div class="back">
 														  <div class="inner">
-															  <p>not mobile responsive yet </p>
+															  <p>REST api, creating, and connecting to outside API's, Javascript, google user login authentication, jquery HTML, CSS click me</p>
 														  </div>
 						</a>
 													  </div>
@@ -323,15 +323,17 @@
 												  <div class="container">
 													  <div class="front" style="background-image: url(./img/clickGame.jpg)">
 														  <div class="inner">
-															  <p>React GOT memory game</p>
-												<span></span>
+															  <p>React GOT memory game
+																  
+															  </p>
+												<span>mobile friendly</span>
 														  </div>
 													  </div>
 													  <a href="https://react-game-got.herokuapp.com/">
 												  
 													  <div class="back">
 														  <div class="inner">
-															  <p> react app mostly mobile click me </p>
+															  <p>React, javascript, node.js, mongodb, express, html, css, javascript, jquery, REST api click me </p>
 														  </div>
 														  </a>
 													  </div>
@@ -343,14 +345,14 @@
 												  <div class="container">
 													  <div class="front" style="background-image: url(./img/booksearch.jpg)">
 														  <div class="inner">
-															  <p>Acirassi</p>
-												<span>Lorem ipsum</span>
+															  <p>React Book Search App</p>
+												<span>Find Your Favorite Novel</span>
 														  </div>
 													  </div>
 													  <a href="https://react-google-api-book-search.herokuapp.com/"> 
 													  <div class="back">
 														  <div class="inner">
-															  <p>                             click me.</p>
+															  <p> React, MongoDB, Express, Node.js, HTML, CSS, Javascript, Jquery, REST api, click me.</p>
 														  </div>
 															</a>
 													  </div>
@@ -360,14 +362,14 @@
 												  <div class="container">
 													  <div class="front" style="background-image: url(./img/newsScrape.jpg)">
 														  <div class="inner">
-															  <p>Acirassi</p>
-												<span>Lorem ipsum</span>
+															  <p>Current Events and News app</p>
+												<span>From Reddit</span>
 														  </div>
 													  </div>
 													  <a href="https://news-scrape-fin23.herokuapp.com/#"> 
 													  <div class="back">
 														  <div class="inner">
-															  <p>                       click me.</p>
+															  <p>Using API route to scrape data from reddit, javascript, react, html, css, express, node.js, mongoDB  click me.</p>
 														  </div>
 														  </a>
 													  </div>
@@ -377,14 +379,14 @@
 												  <div class="container">
 													  <div class="front" style="background-image: url(./img/muppetSurvey.jpg)">
 														  <div class="inner">
-															  <p>Acirassi</p>
-												<span>Lorem ipsum</span>
+															  <p>Muppet Matcher</p>
+												<span>Desktop, semi-mobile responsive</span>
 														  </div>
 													  </div>
 													  <a href="https://friend-finder-fin23.herokuapp.com/"> 
 													  <div class="back">
 														  <div class="inner">
-															  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+															  <p>Express, SQL, javascript, jquery, html, css,  REST api creation, click me</p>
 														  </div>
 														  </a>
 													  </div>
@@ -394,13 +396,13 @@
 												  <div class="container">
 													  <div class="front" style="background-image: url(https://unsplash.it/506/506/)">
 														  <div class="inner">
-															  <p>Acirassi</p>
-												<span>Lorem ipsum</span>
+															  <p>Coming Soon</p>
+												<span></span>
 														  </div>
 													  </div>
 													  <div class="back">
 														  <div class="inner">
-															  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+															  <p>Coming Soon</p>
 														  </div>
 													  </div>
 												  </div>
@@ -411,13 +413,13 @@
 												  <div class="container">
 													  <div class="front" style="background-image: url(https://unsplash.it/508/508/)">
 														  <div class="inner">
-															  <p>Sohanidd</p>
-												<span>Lorem ipsum</span>
+															  <p>Coming Soon</p>
+												<span></span>
 														  </div>
 													  </div>
 													  <div class="back">
 														  <div class="inner">
-															  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+															  <p>Coming Soon</p>
 														  </div>
 													  </div>
 												  </div>
