--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -88,7 +88,7 @@
                               <div class="back">
                                   <div class="inner">
                                       <p>
-                                          ++==+++?++==+++ click me
+                                        Javascript, Firebase, Rest API, HTML, CSS click me
                                       </p>
                                   </div>
                                 </a>
@@ -109,7 +109,7 @@
                               <a href="./projects/giphy-API-master/index.html">
                               <div class="back">
                                   <div class="inner">
-                                      <p>++==+++?++==+++ click me</p>
+                                      <p>Javascript, HTML, CSS, REST api, with ajax call to giphy click me</p>
                                   </div>
                                 </a>
                               </div>
@@ -128,7 +128,7 @@
                               <a href="./projects/Word-Game/index.html">
                               <div class="back">
                                   <div class="inner">
-                                      <p>Word Game Click ME.</p>
+                                      <p>javascript, node.js, html, css, REST api Word Game Click ME.</p>
                                   </div>
                                   </a>
                               </div>
@@ -140,13 +140,13 @@
                               <div class="front" style="background-image: url(./img/hauseBook.jpg">
                                   <div class="inner">
                                       <p>HauseBook App</p>
-                        <span>Lorem ipsum</span>
+                        <span>desktop & semi-mobile responsive </span>
                                   </div>
                               </div>
                               <a href="./projects/groupProject-1/index.html"> 
                               <div class="back">
                                   <div class="inner">
-                                      <p>click me.</p>
+                                    <p> REST api, creating, and connecting to outside API's, Javascript, google user login authentication, jquery HTML, CSS click me.</p>
                                   </div>
                                 </a>
                               </div>
@@ -159,13 +159,13 @@
                               <div class="front" style="background-image: url(./img/dogAdopt.jpg)">
                                   <div class="inner">
                                       <p>Woofyndor pet adoption</p>
-                        <span>Lorem ipsum</span>
+                        <span>Desktop, semi-mobile responsive</span>
                                   </div>
                               </div>
                               <a href="./projects/group-project-2/app/public/index.html"> 
                               <div class="back">
                                   <div class="inner">
-                                      <p>not mobile responsive yet </p>
+                                      <p>REST api, creating, and connecting to outside API's, Javascript, google user login authentication, jquery HTML, CSS click me </p>
                                   </div>
 </a>
                               </div>
@@ -178,14 +178,14 @@
                               <div class="front" style="background-image: url(./img/clickGame.jpg)">
                                   <div class="inner">
                                       <p>React GOT memory game</p>
-                        <span></span>
+                        <span>react app  mobile friendly </span>
                                   </div>
                               </div>
                               <a href="https://react-game-got.herokuapp.com/">
                           
                               <div class="back">
                                   <div class="inner">
-                                      <p> react app mostly mobile click me </p>
+                                      <p> React, javascript, node.js, mongodb, express, html, css, javascript, jquery, REST api </p>
                                   </div>
                                   </a>
                               </div>
@@ -197,14 +197,14 @@
                           <div class="container">
                               <div class="front" style="background-image: url(./img/booksearch.jpg)">
                                   <div class="inner">
-                                      <p>Acirassi</p>
-                        <span>Lorem ipsum</span>
+                                      <p>React Book Search App</p>
+                        <span>Find Your Favorite Novel</span>
                                   </div>
                               </div>
                               <a href="https://react-google-api-book-search.herokuapp.com/"> 
                               <div class="back">
                                   <div class="inner">
-                                      <p>                             click me.</p>
+                                      <p>   React, MongoDB, Express, Node.js, HTML, CSS, Javascript, Jquery, REST api, click me.</p>
                                   </div>
                                     </a>
                               </div>
@@ -214,14 +214,14 @@
                           <div class="container">
                               <div class="front" style="background-image: url(./img/newsScrape.jpg)">
                                   <div class="inner">
-                                      <p>Acirassi</p>
-                        <span>Lorem ipsum</span>
+                                      <p>Current Events and  News app</p>
+                        <span>From Reddit</span>
                                   </div>
                               </div>
                               <a href="https://news-scrape-fin23.herokuapp.com/#"> 
                               <div class="back">
                                   <div class="inner">
-                                      <p>                       click me.</p>
+                                      <p>   Using API route to scrape data from reddit, javascript, react, html, css, express, node.js, mongoDB  click me</p>
                                   </div>
                                   </a>
                               </div>
@@ -231,14 +231,15 @@
                           <div class="container">
                               <div class="front" style="background-image: url(./img/muppetSurvey.jpg)">
                                   <div class="inner">
-                                      <p>Acirassi</p>
-                        <span>Lorem ipsum</span>
+                                      <p>Muppet matcher</p>
+                        <span>semi-mobile responsive</span>
                                   </div>
                               </div>
                               <a href="https://friend-finder-fin23.herokuapp.com/"> 
                               <div class="back">
                                   <div class="inner">
-                                      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+                                      Express, SQL, javascript, jquery, html, css,  REST api creation,
+                                          click me 
                                   </div>
                                   </a>
                               </div>
@@ -248,13 +249,13 @@
                           <div class="container">
                               <div class="front" style="background-image: url(https://unsplash.it/506/506/)">
                                   <div class="inner">
-                                      <p>Acirassi</p>
-                        <span>Lorem ipsum</span>
+                                      <p>coming soon</p>
+                        <span></span>
                                   </div>
                               </div>
                               <div class="back">
                                   <div class="inner">
-                                      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+                                      <p>coming soon</p>
                                   </div>
                               </div>
                           </div>
@@ -265,13 +266,13 @@
                           <div class="container">
                               <div class="front" style="background-image: url(https://unsplash.it/508/508/)">
                                   <div class="inner">
-                                      <p>Sohanidd</p>
-                        <span>Lorem ipsum</span>
+                                      <p>Coming Soon</p>
+                        <span></span>
                                   </div>
                               </div>
                               <div class="back">
                                   <div class="inner">
-                                      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+                                      coming soon
                                   </div>
                               </div>
                           </div>
